--- a/src/main/resources/templates/admin/add.html
+++ b/src/main/resources/templates/admin/add.html
@@ -12,7 +12,7 @@
 <div class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="navbar-brand text-white">
-            <b><span th:text="${user.getEmail()}"></span></b>
+            <b><span th:text="${user.getUsername()}"></span></b>
             <span>with roles:</span>
             <span th:text="${user.getRolesToString()}"></span>
         </div>
